--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Discovering ML & Embedded Systems
+description: This blog is meant to showcase the projects I do in my spare time, mainly related to ML, science, business and embedded systems.
+github_username: sdomoszlai13
 
 # Email and twitter are optional:
-email:
+email: sebastian.domoszlai@protonmail.com
 twitter_username:
 
 # Set this to true to get LaTeX math equation support
-use_math:
+use_math: true
 
 # Add your Google Analytics ID here if you have one and want to use it
 google_analytics:
