--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-theme: minima
+theme: architect
 
 title: Discovering ML & Embedded Systems
 description: This blog is meant to showcase the projects I do in my spare time, mainly related to ML, science, business and embedded systems.
