--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ google_analytics:
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: architect
 plugins:
+  - github-pages
   - jekyll-feed
   - jekyll-gist
   - jekyll-octicons
