--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Discovering ML & Embedded Systems
+title: TECH ADVENTURES
 description: This blog is meant to showcase the projects I do in my spare time, mainly related to ML, science, business and embedded systems.
 github_username: sdomoszlai13
 
